modules/network/vpc.tf
# vpc
resource "aws_vpc" "main" {
cidr_block = "10.0.0.0/16"
enable_dns_hostnames = true
enable_dns_support = true
tags = { Name = "malaa-vpc" }
}
# Internet Gateway 
resource "aws_internet_gateway" "igw" {
vpc_id = aws_vpc.main.id
tags = { Name = "malaa-igw" }
}
